# litmus

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .ruff.toml  .rumdl.toml  .taplo.toml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MIGRATION-TO-TUNE-PY.md  README.md  babel.cfg  compose.dev.yml  compose.prod.yml  config.css  config.js  djlint.toml  justfile  package.json  pyproject.toml  renovate.json  start.sh  ty.toml
.github/workflows/: pr-title-check.yml  release.yml
.justfiles/: cicd.justfile  deps.justfile  formatting.justfile  gitflow.justfile  helpers.justfile  i18n.justfile  linting.justfile  localdev.justfile  scaffolding.justfile
docs/: ARCHITECTURE.md  PRD.md
docs/dev/: DEVELOPMENT_WORKFLOW.md  GETTING_STARTED.md  QUICK_REFERENCE.md  README_DEVELOPMENT.md  TDD_AND_CODEGEN.md  TEMPLATES.md  WORKFLOW_VISUAL_GUIDE.md
src/litmus/: tune.py
src/litmus/frontend/: routes.py
templates/email/: AGENTS.md
templates/frontend/: AGENTS.md  index.html.jinja
templates/markdown/: AGENTS.md
